<resources>
    <string name="app_name">OneChat</string>
    <string name="welcome_to_one_chat">Welcome to One Chat</string>
    <string name="main_page">Main Page</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="email_adress">Email Adress</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="crete_account">Crete Account</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All users</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="hi_i_am_using_one_chat">Hi.. I am using One Chat</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="save_changes">Save Changes</string>
</resources>
