<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.zunay.onechat.ActivitySettings">

    <include
        android:id="@+id/account_settings_app_bar"
        layout="@layout/app_bar_layout" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:src="@drawable/ic_action_name"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/textView_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/display_name"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView_display_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_display_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:text="@string/hi_i_am_using_one_chat"
        android:textSize="15dp" />

    <Button
        android:id="@+id/button_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_display_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/button_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_change_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/change_status" />

</RelativeLayout>
