<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.zunay.onechat.LoginActivity">

        <include layout="@layout/app_bar_layout" android:id="@+id/login_app_bar_layout"/>


        <TextView
            android:id="@+id/textView_login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_app_bar_layout"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="Sign In to YOur Account"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textColorHighlight="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_login_account"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/email_adress"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_email_login"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email_login"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_password_login"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText_password_login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/colorActivatedHighlight"
            android:text="@string/login" />
    </RelativeLayout>
</ScrollView>